# routes/index.js
@@ -4,6 +4,7 @@ router.get('/', (req, res) => {
     res.send('Hello, World!');
 });
 
+router.use('/auth', require('./auth'));
 router.use('/movies', require('./movies'));
 router.use('/comments', require('./comments'));
 router.use('/api-docs', require('./swagger'));
