# routes/movies.js
@@ -2,11 +2,12 @@ const express = require('express');
 const router = express.Router();
 
 const moviesController = require('../controllers/movies');
+const { authenticateJWT } = require('../middleware/auth');
 
-router.get('/', moviesController.getFiveMovies);
-router.get('/:id', moviesController.getSingleMovie);
-router.post('/', moviesController.createMovie);
-router.put('/:id', moviesController.updateMovie);
-router.delete('/:id', moviesController.deleteMovie);
+router.get('/', authenticateJWT, moviesController.getFiveMovies);
+router.get('/:id', authenticateJWT, moviesController.getSingleMovie);
+router.post('/', authenticateJWT, moviesController.createMovie);
+router.put('/:id', authenticateJWT, moviesController.updateMovie);
+router.delete('/:id', authenticateJWT, moviesController.deleteMovie);
 
 module.exports = router;
